# swagger.json
@@ -11,15 +11,12 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/logout": {
       "get": {
-        "tags": [
-          "Hello World"
-        ],
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -43,7 +40,7 @@
         "tags": [
           "Movies"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "body",
@@ -82,6 +79,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -119,7 +119,7 @@
         "tags": [
           "Movies"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "id",
@@ -165,6 +165,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -174,7 +177,7 @@
         "tags": [
           "Movies"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "id",
@@ -189,6 +192,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -215,7 +221,7 @@
         "tags": [
           "TV Shows"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "body",
@@ -257,6 +263,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -294,7 +303,7 @@
         "tags": [
           "TV Shows"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "id",
@@ -343,6 +352,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -352,7 +364,7 @@
         "tags": [
           "TV Shows"
         ],
-        "description": "",
+        "description": "Requires authentication. To access, log in via the /login endpoint.",
         "parameters": [
           {
             "name": "id",
@@ -367,6 +379,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
